<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MovieDetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="9dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/accessibility_action_favorite"
            android:scaleType="centerInside"
            android:src="@drawable/ic_favorite_border_alpha_24dp"
            android:visibility="invisible"
            app:layout_constraintRight_toRightOf="@id/main_container"
            app:layout_constraintTop_toTopOf="@id/main_container" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/accessibility_poster_description"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="@id/main_container"
            app:layout_constraintTop_toTopOf="@id/main_container"
            tools:background="@color/no_image_bg_color"
            tools:src="@drawable/no_image_placeholder" />

        <TextView
            android:id="@+id/title"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="-10dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@id/poster"
            app:layout_constraintRight_toLeftOf="@id/favorite"
            app:layout_constraintTop_toTopOf="@id/poster"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/release_date"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="August 20, 2015" />

        <TextView
            android:id="@+id/rating"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/release_date"
            tools:text="10" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_10"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintLeft_toRightOf="@id/rating"
            app:layout_constraintTop_toTopOf="@id/rating" />

        <TextView
            android:id="@+id/synopsis"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="@id/main_container"
            app:layout_constraintRight_toRightOf="@id/main_container"
            app:layout_constraintTop_toBottomOf="@id/poster"
            tools:text="Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. " />

        <LinearLayout
            android:id="@+id/trailers_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/main_container"
            app:layout_constraintRight_toRightOf="@id/main_container"
            app:layout_constraintTop_toBottomOf="@id/synopsis">

            <TextView
                android:id="@+id/trailers_label"
                style="@style/Widget.App.Subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/section_trailers" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <LinearLayout
                    android:id="@+id/trailers_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reviews_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/main_container"
            app:layout_constraintRight_toRightOf="@id/main_container"
            app:layout_constraintTop_toBottomOf="@id/trailers_section">

            <TextView
                android:id="@+id/reviews_label"
                style="@style/Widget.App.Subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_reviews" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
